@@ -1,7 +1,7 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 949dc29ce03f33e16b4f50b9e7058415 *DESCRIPTION
-fef005a02c8f15cb59f86d0b44ef1025 *inst/NEWS.Rd
+641c18c3cae4aad34151fd930845b014 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
@@ -10,20 +10,20 @@ d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
 578fe4903cc4f5d7bc5a6f346be1e9e9 *man/nif.Rd
 642f1b417705a95de829d995fecf476b *man/psum.Rd
 14e3add07190fd18d0161f4f0b0b5257 *man/setlevels.Rd
-a1dec4110f089798466c8880a9240629 *man/topn.Rd
+e0d3b091b5182fdcc8868c93a2c59476 *man/topn.Rd
 a82fff7beac68b464016f769970a0d5b *man/vswitch.Rd
 58f02aa1f4fd13a90f7b809ddc0ba212 *NAMESPACE
-4214babcf65a9cd979fe3605308e0505 *R/call.R
+4036ce94a1bc9516fa42f2399b4326fe *R/call.R
 11548681f917f28e5c72d245ddc46aac *README.md
-749ba67dcfc0a573b2c9f5d295352162 *src/dup.c
+5c394d3c655aa7f113af6c3f5f6ef310 *src/dup.c
 84230b3325b0d1b661e4688f9aac670a *src/fpos.c
 50b06074e8dc6f1f38be61d3ef252ade *src/iif.c
-e08a86e4f5b329d5b89e6f6c8ae0979e *src/init.c
-139b1cf3c912220297f6ecc4fce997e0 *src/kit.h
+0f18dd15316fb9ba638d49c46d900e01 *src/init.c
+c466fd353187aca84f86972442c8ebd0 *src/kit.h
 63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
 d2f4fdbd388ae96944e5de4e7c8fb138 *src/psum.c
-88818a4fa9181bc3cde993a895af0d9f *src/topn.c
-629f14b670ab6ae118c5ba01c19c7862 *src/utils.c
+91d603f722355667800428c1a6c03d34 *src/topn.c
+df8c4274f76c92c1c77b95a7ead81938 *src/utils.c
 cf0cc91ddf63af7a879bece18687f096 *src/vswitch.c
-1df449cd68cc7e9487e785b0eaff52ea *tests/test_kit.R
+36b7a3bbb4beea6634815525da2d199e *tests/test_kit.R
