@@ -7,12 +7,13 @@
   The output is the same as \code{order(vec)[1:n]}, but internally optimized not to sort the irrelevant elements of the input (and therefore much faster, for small \code{n} relative to input size).
 }
 \usage{
-  topn(vec, n=6L, decreasing=TRUE)
+  topn(vec, n=6L, decreasing=TRUE, hasna=TRUE)
 }
 \arguments{
   \item{vec}{ A numeric vector of type numeric or integer. Other types are not supported yet. }
   \item{n}{ A positive integer value greater or equal to 1. Maximum value is 1000. }
   \item{decreasing}{ A logical value (default \code{TRUE}) to indicate whether to sort \code{vec} in decreasing or increasing order. Equivalent to argument \code{decreasing} in function \code{base::order}. Please note that unlike \code{topn} default value in \code{base::order} is \code{FALSE}.}
+  \item{hasna}{ A logical value (default \code{TRUE}) to indicate whether \code{vec} contains \code{NA} values. }
 }
 \value{
   \code{integer} vector of indices of the most extreme (according to \code{decreasing}) \code{n} values in vector \code{vec}.
