@@ -18,7 +18,7 @@
 
 #include "kit.h"
 
-SEXP topnR(SEXP vec, SEXP n, SEXP dec) {
+SEXP topnR(SEXP vec, SEXP n, SEXP dec, SEXP hasna) {
   int len0 = asInteger(n);
   const R_xlen_t len1 = xlength(vec);
   if (isS4(vec)) {
@@ -39,171 +39,300 @@ SEXP topnR(SEXP vec, SEXP n, SEXP dec) {
   if (!IS_BOOL(dec)) {
     error("Argument 'decreasing' must be TRUE or FALSE and length 1.");
   }
-  const bool vdec = LOGICAL(dec)[0];
-  SEXPTYPE tvec = UTYPEOF(vec);
+  if (!IS_BOOL(hasna)) {
+    error("Argument 'hasna' must be TRUE or FALSE and length 1.");
+  }
   SEXP ans = PROTECT(allocVector(INTSXP, len0));
   int *restrict pans = INTEGER(ans);
   int tmp;
-  if (vdec) {
-    switch(tvec) {
+  if (asLogical(dec)) {
+    switch(UTYPEOF(vec)) {
     case INTSXP: {
       int i, j, idx = 0;
       const int *restrict pvec = INTEGER(vec);
       int min_value = pvec[0];
-      for (i = 0; i < len0; ++i) {
-        pans[i] = i;
-        if (pvec[i] <= min_value || pvec[i] == NA_INTEGER) {
-          min_value = pvec[i];
-          idx = i;
+      if (asLogical(hasna)) {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] <= min_value || pvec[i] == NA_INTEGER) {
+            min_value = pvec[i];
+            idx = i;
+          }
         }
-      }
-      for (i = len0; i < len1; ++i) {
-        if (pvec[i] == NA_INTEGER) {
-          continue;
-        }
-        if (pvec[i] > min_value) {
-          min_value = pvec[i];
-          pans[idx] = i;
-          for (j = 0; j <len0; ++j) {
-            if ((min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || pvec[pans[j]] == NA_INTEGER) {
-              min_value = pvec[pans[j]];
-              idx = j;
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] == NA_INTEGER) {
+            continue;
+          }
+          if (pvec[i] > min_value) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if ((min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || pvec[pans[j]] == NA_INTEGER) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
             }
           }
         }
-      }
-      for (i = 0; i < len0; ++i) {
-        tmp = pans[i];
-        for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
-          pans[j] = pans[j-1];
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
         }
-        pans[j] = tmp;
-      }
-      for (i =0; i < len0; ++i) {
-        pans[i]++;
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
+      } else {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] <= min_value) {
+            min_value = pvec[i];
+            idx = i;
+          }
+        }
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] > min_value) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if (min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
+            }
+          }
+        }
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
+        }
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
       }
     } break;
     case REALSXP: {
       int i, j, idx = 0;
       const double *restrict pvec = REAL(vec);
       double min_value = pvec[0];
-      for (i = 0; i < len0; ++i) {
-        pans[i] = i;
-        if (pvec[i] <= min_value || ISNAN(pvec[i])) {
-          min_value = pvec[i];
-          idx = i;
+      if (asLogical(hasna)) {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] <= min_value || ISNAN(pvec[i])) {
+            min_value = pvec[i];
+            idx = i;
+          }
         }
-      }
-      for (i = len0; i < len1; ++i) {
-        if (ISNAN(pvec[i])) {
-          continue;
-        }
-        if (pvec[i] > min_value || ISNAN(min_value)) {
-          min_value = pvec[i];
-          pans[idx] = i;
-          for (j = 0; j <len0; ++j) {
-            if ((min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || ISNAN(pvec[pans[j]])) {
-              min_value = pvec[pans[j]];
-              idx = j;
+        for (i = len0; i < len1; ++i) {
+          if (ISNAN(pvec[i])) {
+            continue;
+          }
+          if (pvec[i] > min_value || ISNAN(min_value)) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if ((min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || ISNAN(pvec[pans[j]])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
             }
           }
         }
-      }
-      for (i = 0; i < len0; ++i) {
-        tmp = pans[i];
-        for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || (!ISNAN(pvec[tmp]) && ISNAN(pvec[pans[j-1]]))); --j) {
-          pans[j] = pans[j-1];
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || (!ISNAN(pvec[tmp]) && ISNAN(pvec[pans[j-1]]))); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
         }
-        pans[j] = tmp;
-      }
-      for (i =0; i < len0; ++i) {
-        pans[i]++;
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
+      } else {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] <= min_value) {
+            min_value = pvec[i];
+            idx = i;
+          }
+        }
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] > min_value) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if (min_value > pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
+            }
+          }
+        }
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] > pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
+        }
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
       }
     } break;
     default:
-      error("Type %s is not supported.", type2char(tvec));
+      error("Type %s is not supported.", type2char(UTYPEOF(vec)));
     }
   } else {
-    switch(tvec) {
+    switch(UTYPEOF(vec)) {
     case INTSXP: {
       int i, j, idx = 0;
       const int *restrict pvec = INTEGER(vec);
       int min_value = pvec[0];
-      for (i = 0; i < len0; ++i) {
-        pans[i] = i;
-        if ((pvec[i] >= min_value && min_value != NA_INTEGER) || pvec[i] == NA_INTEGER) {
-          min_value = pvec[i];
-          idx = i;
+      if (asLogical(hasna)) {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if ((pvec[i] >= min_value && min_value != NA_INTEGER) || pvec[i] == NA_INTEGER) {
+            min_value = pvec[i];
+            idx = i;
+          }
         }
-      }
-      for (i = len0; i < len1; ++i) {
-        if (pvec[i] == NA_INTEGER) {
-          continue;
-        }
-        if (pvec[i] < min_value || min_value == NA_INTEGER) {
-          min_value = pvec[i];
-          pans[idx] = i;
-          for (j = 0; j <len0; ++j) {
-            if (((min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) && min_value != NA_INTEGER) || pvec[pans[j]] == NA_INTEGER) {
-              min_value = pvec[pans[j]];
-              idx = j;
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] == NA_INTEGER) {
+            continue;
+          }
+          if (pvec[i] < min_value || min_value == NA_INTEGER) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if (((min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) && min_value != NA_INTEGER) || pvec[pans[j]] == NA_INTEGER) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
             }
           }
         }
-      }
-      for (i = 0; i < len0; ++i) {
-        tmp = pans[i];
-        if (pvec[tmp] == NA_INTEGER) {
-          continue;
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          if (pvec[tmp] == NA_INTEGER) {
+            continue;
+          }
+          for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || pvec[pans[j-1]] == NA_INTEGER); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
         }
-        for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || pvec[pans[j-1]] == NA_INTEGER); --j) {
-          pans[j] = pans[j-1];
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
         }
-        pans[j] = tmp;
-      }
-      for (i =0; i < len0; ++i) {
-        pans[i]++;
+      } else {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] >= min_value) {
+            min_value = pvec[i];
+            idx = i;
+          }
+        }
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] < min_value) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if (min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
+            }
+          }
+        }
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
+        }
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
       }
     } break;
     case REALSXP: {
       int i, j, idx = 0;
       const double *restrict pvec = REAL(vec);
       double min_value = pvec[0];
-      for (i = 0; i < len0; ++i) {
-        pans[i] = i;
-        if (pvec[i] >= min_value || ISNAN(pvec[i])) {
-          min_value = pvec[i];
-          idx = i;
+      if (asLogical(hasna)) {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] >= min_value || ISNAN(pvec[i])) {
+            min_value = pvec[i];
+            idx = i;
+          }
         }
-      }
-      for (i = len0; i < len1; ++i) {
-        if (ISNAN(pvec[i])) {
-          continue;
-        }
-        if (pvec[i] < min_value || ISNAN(min_value)) {
-          min_value = pvec[i];
-          pans[idx] = i;
-          for (j = 0; j <len0; ++j) {
-            if ((min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || ISNAN(pvec[pans[j]])) {
-              min_value = pvec[pans[j]];
-              idx = j;
+        for (i = len0; i < len1; ++i) {
+          if (ISNAN(pvec[i])) {
+            continue;
+          }
+          if (pvec[i] < min_value || ISNAN(min_value)) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if ((min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) || ISNAN(pvec[pans[j]])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
             }
           }
         }
-      }
-      for (i = 0; i < len0; ++i) {
-        tmp = pans[i];
-        for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || (!ISNAN(pvec[tmp]) && ISNAN(pvec[pans[j-1]]))); --j) {
-          pans[j] = pans[j-1];
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1]) || (!ISNAN(pvec[tmp]) && ISNAN(pvec[pans[j-1]]))); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
         }
-        pans[j] = tmp;
-      }
-      for (i =0; i < len0; ++i) {
-        pans[i]++;
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
+      } else {
+        for (i = 0; i < len0; ++i) {
+          pans[i] = i;
+          if (pvec[i] >= min_value) {
+            min_value = pvec[i];
+            idx = i;
+          }
+        }
+        for (i = len0; i < len1; ++i) {
+          if (pvec[i] < min_value) {
+            min_value = pvec[i];
+            pans[idx] = i;
+            for (j = 0; j <len0; ++j) {
+              if (min_value < pvec[pans[j]] || (min_value == pvec[pans[j]] && pans[idx] < pans[j])) {
+                min_value = pvec[pans[j]];
+                idx = j;
+              }
+            }
+          }
+        }
+        for (i = 0; i < len0; ++i) {
+          tmp = pans[i];
+          for (j = i; j > 0 && (pvec[tmp] < pvec[pans[j-1]] || (pvec[tmp] == pvec[pans[j-1]] && tmp < pans[j-1])); --j) {
+            pans[j] = pans[j-1];
+          }
+          pans[j] = tmp;
+        }
+        for (i =0; i < len0; ++i) {
+          pans[i]++;
+        }
       }
     } break;
     default:
-      error("Type %s is not supported.", type2char(tvec));
+      error("Type %s is not supported.", type2char(UTYPEOF(vec)));
     }
   }
   UNPROTECT(1);
